--- a/Latex Document/Thesis.bib
+++ b/Latex Document/Thesis.bib
@@ -364,3 +364,11 @@
   year={2010},
   organization={IEEE}
 }
+
+@inproceedings{telford2011condition,
+  title={Condition based maintenance (CBM) in the oil and gas industry: An overview of methods and techniques},
+  author={Telford, Samuel and Mazhar, Muhammad Ilyas and Howard, Ian},
+  booktitle={Proceedings of the 2011 international conference on industrial engineering and operations management, Kuala Lumpur, Malaysia},
+  pages={22--24},
+  year={2011}
+}
